# newgrf-sprite-tool

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  resources.qrc
assets/: palette-dos-groups.json  palette-win-groups.json  style.qss
assets/icons/: common.psd  pen.psd  view.psd
dependencies/: CMakeLists.txt
include/mytec/: PCH.hpp  app.hpp  asset.hpp  file_dialog.hpp  str.hpp  vec.hpp
include/mytec/model/: editor.hpp  history_action.hpp  image.hpp  image_collection.hpp  palette.hpp
include/mytec/model/tools/: fill.hpp  pen.hpp  tool_t.hpp  view.hpp
include/mytec/ui/: event.hpp  misc.hpp  popup_modal.hpp  promise_popup.hpp  promise_popup.inl  style.hpp
include/mytec/ui/components/: button.hpp  dialogs.hpp  menu_bar.hpp  modal_stack.hpp  modal_stack.inl  palette_tab.hpp  side_bar.hpp  status_bar.hpp
include/mytec/util/: undo_redo_stack.hpp  undo_redo_stack.inl
src/: CMakeLists.txt  headers.hpp  inline_resources.py  main.cpp
src/Mytec/: app.cpp  main.cpp
src/Mytec/model/: editor.cpp  image.cpp  image_manager.cpp
src/Mytec/tools/: pen.cpp  view.cpp
src/Mytec/ui/: button.cpp  dialogs.cpp  message_box.cpp  misc.cpp  popup_modal.cpp  style.cpp
src/Mytec/util/: file_dialog.cpp  str.cpp
src/include/Mytec/: app.hpp
src/include/Mytec/model/: editor.hpp  history_action.hpp  image.hpp  image_manager.hpp  palette.hpp
src/include/Mytec/tools/: pen.hpp  tool_t.hpp  view.hpp
src/include/Mytec/ui/: button.hpp  dialogs.hpp  message_box.hpp  misc.hpp  popup_modal.hpp  promise_popup.hpp  style.hpp
src/include/Mytec/util/: file_dialog.hpp  str.hpp  undo_redo_stack.hpp  vec.hpp
src/legacy/model/tools/: pen.cpp  pen.hpp
src/legacy/ui/: style.cpp
src/model/: image.cpp  image.hpp  palette.cpp  palette.hpp  palette_action.cpp  palette_action.hpp
src/model/tools/: pen.cpp  pen.hpp  tool.cpp  tool.hpp  tool_factory.cpp  tool_factory.hpp  view.cpp  view.hpp
src/mytec/: app.cpp  asset.cpp  file_dialog.cpp  main.cpp  resource.res  str.cpp
src/mytec/model/: editor.cpp  image.cpp  image_collection.cpp
src/mytec/model/tools/: fill.cpp  pen.cpp  tool_t.cpp  view.cpp
src/mytec/ui/: event.cpp  misc.cpp  palette_tab.cpp  popup_modal.cpp  style.cpp
src/mytec/ui/components/: button.cpp  menu_bar.cpp  modal_stack.cpp  side_bar.cpp  status_bar.cpp
src/mytec/ui/components/dialogs/: create_new_image.cpp  message_box.cpp  save_closing_image.cpp
src/resources/: resource.res
src/util/: str.cpp  str.hpp
src/widgets/: canvas.cpp  canvas.hpp  editor.cpp  editor.hpp  main_window.cpp  main_window.hpp  palette_tab.cpp  palette_tab.hpp
src/widgets/dialogs/: create_file_dialog.cpp  create_file_dialog.hpp  save_file_dialog.cpp  save_file_dialog.hpp
src/widgets/internal/: palette_tab_color.cpp  palette_tab_color.hpp  palette_tab_sprite.cpp  palette_tab_sprite.hpp
